k8s/overlays/azure/disable-gridadmin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gridadmin-app
$patch: delete
