k8s/overlays/azure/disable-gridadmin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gridadmin-app-ingress
$patch: delete
