k8s/overlays/azure/limit-gridexplore-cases.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gridexplore-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    # To be able to import big networks
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
